--- a/packages/@smotaal/tokenizer/examples/browser/markup-debug.css
+++ b/packages/@smotaal/tokenizer/examples/browser/markup-debug.css
@@ -1,58 +1,75 @@
-@media screen {
-  .markup {
-    --debug: var(--color, var(--markup-neutral, #999));
-    --ring: var(--debug, var(--markup-neutral, #999));
-    --padding: 1.5px;
-    margin: calc(-1 * var(--padding, 2px)) calc(-2 * var(--padding, 2px));
-    border-radius: 1ch;
-    border: calc(2 * var(--padding, 2px)) solid transparent;
-  }
-
-  .markup.comment,
-  .markup.in-comment,
-  .markup.whitespace {
+@media only screen {
+  .markup-line .markup.comment,
+  .markup-line .markup.in-comment,
+  .markup-line .markup.whitespace {
     --ring: var(--markup-whitespaces, var(--markup-neutral, #999));
   }
 
-  .markup-line .markup::before {
-    display: none;
+  .markup-line {
+    --widget: #000a;
+    /* overflow: visible; */
+  }
+
+  .dark-mode .markup-line {
+    --widget: #fffa;
+  }
+
+  .markup-line-numbers .markup-line:hover::before {
+    background-color: var(--markup-neutral-dim, #9993);
+    color: var(--markup-contrast);
+  }
+
+  .markup-line > .markup {
+    --padding: 1px;
+    --debug: var(--color, var(--markup-neutral, #999));
+    --ring: var(--debug, var(--markup-neutral, #999));
+    margin: calc(-1 * var(--padding, 2px)) calc(-2 * var(--padding, 2px));
+    border-radius: 1ch;
+    border: calc(2 * var(--padding, 2px)) solid transparent;
+    cursor: text;
+  }
+
+  .markup-line > .markup:hover {
+    background-color: var(--markup-constast, white);
+    box-shadow: 0 0 0 2px var(--markup-constast, white), 0 3px 10px -2px #0006;
+    position: relative;
+    -webkit-box-decoration-break: clone;
+    box-decoration-break: slice;
+    z-index: 2;
+  }
+
+  .markup-line > .markup:hover::before {
+    --padding: 1.5px;
+    display: grid;
     position: absolute;
     pointer-events: none;
     content: attr(class);
     line-height: initial;
-    /* font-weight: initial; font-style: initial; */
+    font-weight: initial;
+    font-style: initial;
     font: initial;
     font-size: small;
     font-family: inherit;
-    white-space: pre;
-    background-color: #000a;
+    white-space: normal;
+    background-color: var(--widget, #0006);
     color: var(--markup-shadow, white);
-    text-shadow: 0 1px 1px var(--markup-color, #666);
-    box-shadow: 0 0 10px -2.5px var(--ring, currentColor), inset 0 0 50px -15px var(--ring, currentColor);
+    text-shadow: 0 0.5px 0.5px var(--widget, #0006);
+    box-shadow: inset 0 0 50px var(--ring, currentColor), inset 0 0 50px var(--widget, currentColor),
+      0 0 5px -2.5px #0006;
     border-radius: 1ch;
+    border: none;
     border-bottom: 1ch solid var(--ring, currentColor);
     padding: calc(3 * var(--padding, 2px)) calc(6 * var(--padding, 2px));
-    left: calc(-6 * var(--padding, 2px));
+    /* left: calc(-6 * var(--padding, 2px)); */
+    left: 50%;
+    will-change: transform transition;
+    transform: translateX(-50%);
+    text-align: center;
+    width: max-content;
+    min-width: 10em;
+    max-width: -webkit-fill-available;
+    max-width: fill-available;
+    /* min-height: fit-content; */
     bottom: calc(100% + 0.5ch + -2 * var(--padding, 2px));
-    z-index: 1;
-  }
-
-  .dark-mode .markup-line .markup::before {
-    background-color: #fffa;
-  }
-
-  /* .markup:active::before, */
-  .markup-line .markup:hover::before {
-    display: block;
-  }
-
-  /* .markup:active, */
-  .markup-line .markup:hover {
-    background-color: var(--markup-constast, white);
-    box-shadow: 0 0 10px -7.5px var(--markup-neutral, #999), 0 0 5px -1.5px var(--ring, currentColor);
-    cursor: text;
-    position: relative;
-    z-index: 1;
-    /* z-index: 0; */
   }
 }
