--- a/packages/@smotaal/tokenizer/examples/browser/markup-debug.css
+++ b/packages/@smotaal/tokenizer/examples/browser/markup-debug.css
@@ -51,11 +51,10 @@
     font-size: small;
     font-family: inherit;
     white-space: normal;
-    background-color: var(--widget, #0006);
+    background: var(--widget, #000a);
     color: var(--markup-shadow, white);
-    text-shadow: 0 0.5px 0.5px var(--widget, #0006);
-    box-shadow: inset 0 0 50px var(--ring, currentColor), inset 0 0 50px var(--widget, currentColor),
-      0 0 5px -2.5px #0006;
+    text-shadow: 0 0.5px 0.5px var(--widget, #000a);
+    box-shadow: inset 0 0 50px var(--widget, #000a), inset 0 0 75px var(--ring, currentColor), 0 0 5px -2.5px #0006;
     border-radius: 1ch;
     border: none;
     border-bottom: 1ch solid var(--ring, currentColor);
