--- a/packages/@smotaal/tokenizer/examples/browser/styles.css
+++ b/packages/@smotaal/tokenizer/examples/browser/styles.css
@@ -30,6 +30,7 @@
   white-space: pre-wrap;
   transition: background 0.75s ease-in-out;
   will-change: auto;
+  box-sizing: border-box;
 }
 
 .markup-container > header {
@@ -48,7 +49,7 @@
   --outset-border: 0.5px solid var(--border);
   display: grid;
   grid-auto-flow: column dense;
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
   grid-gap: 1ch;
   padding: 0.25ch 1ch;
   margin-bottom: 1ch;
@@ -129,7 +130,7 @@
 
 .markup-container > header a[onclick] {
   display: inline-block;
-  box-sizing: padding-box;
+  /* box-sizing: padding-box; */
   width: 2.5ch;
   height: 0;
   padding: 25% 0;
@@ -177,19 +178,16 @@ i[icon] {
 
 @media only screen {
   html {
-    /* max-width: 100vw; */
+    width: 100vw;
     /* height: 100vh; */
     /* min-width: 100vw; */
     min-height: 100vh;
-    box-sizing: border-box;
     -webkit-text-size-adjust: 100%;
   }
 
   body {
     min-height: inherit;
-    min-width: inherit;
-    max-height: inherit;
-    max-width: inherit;
+    width: inherit;
     display: grid;
     margin: 0;
     padding: 0;
@@ -203,6 +201,10 @@ i[icon] {
   .markup-container {
     padding: 1ch;
     margin: 0;
+    width: inherit;
+    display: grid;
+    grid-auto-rows: max-content;
+    /* overflow-x: hidden; */
   }
 
   .markup-container > header {
@@ -234,6 +236,7 @@ i[icon] {
   .markup-container .markup-content {
     /* will-change: filter, contents; */
     transition: filter 0.15s ease-out;
+    overflow-x: hidden;
   }
 
   .markup-container .markup-content.rendering,
