Implement new core (major changes on all aspects)

--- a/styles/markup-debug.css
+++ b/styles/markup-debug.css
@@ -1,99 +1,1 @@
-@media only screen {
-  .markup-line .markup.comment,
-  .markup-line .markup.in-comment,
-  .markup-line .markup.whitespace {
-    --ring: var(--markup-whitespaces, var(--markup-neutral, #999));
-  }
-
-  .markup-line {
-    --widget: #000a;
-    /* overflow: visible; */
-  }
-
-  .dark-mode .markup-line {
-    --widget: #fffa;
-  }
-
-  .markup-line > .markup {
-    --padding: 1px;
-    --debug: var(--color, var(--markup-neutral, #999));
-    --ring: var(--debug, var(--markup-neutral, #999));
-    margin: calc(-1 * var(--padding, 2px)) calc(-2 * var(--padding, 2px));
-    border-radius: 1ch;
-    border: calc(2 * var(--padding, 2px)) solid transparent;
-    cursor: text;
-  }
-
-  .markup-wrapper,
-  .markup-wrapper * {
-    /* box-sizing: content-box; */
-  }
-
-  /* .marker + .markup, */
-  .marker + .markup-line {
-    /* filter: drop-shadow(0 1px 0 #000); */
-    /* box-shadow: 0 0 1px #0003; */
-    background: #9991;
-    border-radius: 4px;
-    border: 1px solid #9991;
-    margin: -1px;
-    /* contain: layout; */
-    /* outline: 2px solid #9991; */
-    /* outline-offset: 4px; */
-    /* background-color: #9991; */
-  }
-
-  /* .markup-line-numbers .markup-line:focus-within::before, */
-  .marked > .marker + .markup-line::before,
-  .markup-line-numbers .markup-wrapper:not(.marked) > .markup-line:hover::before {
-    background-color: var(--markup-neutral-dim, #9993);
-    color: var(--markup-contrast);
-  }
-
-  /* .markup-line > .markup:focus, */
-  .marked > .markup-line > .marker + .markup,
-  .markup-wrapper:not(.marked) > .markup-line > .markup:hover {
-    background-color: var(--markup-constast, white);
-    box-shadow: 0 0 0 2px var(--markup-constast, white), 0 3px 10px -2px #0006;
-    position: relative;
-    -webkit-box-decoration-break: clone;
-    box-decoration-break: slice;
-    z-index: 2;
-  }
-
-  /* .markup-line > .markup:focus::before, */
-  .marked > .markup-line > .marker + .markup::before,
-  .markup-wrapper:not(.marked) > .markup-line > .markup:hover::before {
-    --padding: 1.5px;
-    display: grid;
-    position: absolute;
-    pointer-events: none;
-    content: attr(class);
-    line-height: initial;
-    font-weight: initial;
-    font-style: initial;
-    font: initial;
-    font-size: small;
-    font-family: inherit;
-    white-space: normal;
-    background: var(--widget, #000a);
-    color: var(--markup-shadow, white);
-    text-shadow: 0 0.5px 0.5px var(--widget, #000a);
-    box-shadow: inset 0 0 50px var(--widget, #000a), inset 0 0 75px var(--ring, currentColor), 0 0 5px -2.5px #0006;
-    border-radius: 1ch;
-    border: none;
-    border-bottom: 1ch solid var(--ring, currentColor);
-    padding: calc(3 * var(--padding, 2px)) calc(6 * var(--padding, 2px));
-    /* left: calc(-6 * var(--padding, 2px)); */
-    left: 50%;
-    will-change: transform transition;
-    transform: translateX(-50%);
-    text-align: center;
-    width: max-content;
-    min-width: 10em;
-    max-width: -webkit-fill-available;
-    max-width: fill-available;
-    /* min-height: fit-content; */
-    bottom: calc(100% + 0.5ch + -2 * var(--padding, 2px));
-  }
-}
+../packages/tokenizer/browser/styles/markup-debug.css
