--- a/packages/tokenizer/examples/browser/styles.css
+++ b/packages/tokenizer/examples/browser/styles.css
@@ -1,6 +1,6 @@
-@import '/pholio/styles/fonts/iosevka/iosevka.css';
-@import '/markup/styles/markup.css';
-@import '/markup/styles/markup-debug.css';
+/* @import '/pholio/styles/fonts/iosevka/iosevka.css'; */
+@import '../../browser/styles/markup.css';
+@import '../../browser/styles/markup-debug.css';
 
 :host {
   --markup-neutral-light: var(--markup-neutral-light, #aaa);
@@ -22,47 +22,50 @@
 /** INHERIT **/ /* @import '/pholio/styles/inherit.css'; */
 @media only screen {
   html {
-    box-sizing: border-box;
+    /* box-sizing: border-box; */
     min-height: 100vh;
     min-width: 100vw;
     width: 100vw;
     margin-left: calc(100vw - 100%);
     -webkit-text-size-adjust: 100%;
     font-size: 1rem;
+    /* background-color: var(--markup-background, #999); */
   }
 
   body {
     width: inherit;
     min-height: inherit;
     min-width: inherit;
+    overflow-x: hidden;
     /* max-height: inherit; */
-    overflow-y: scroll;
+    /* overflow-y: scroll; */
     touch-action: pan-y;
-    background-color: var(--markup-background, #999);
+    background-color: #999;
   }
 
   .markup-container {
+    box-sizing: border-box;
     height: max-content;
     width: inherit;
+    overflow-x: hidden;
     /* max-width: inherit; */
     min-height: inherit;
     min-width: inherit;
     /* max-height: inherit; */
     padding: 1ch;
     margin: 0;
-    box-sizing: border-box;
   }
-
+  /*
   .markup-wrapper,
   .markup-wrapper * {
     box-sizing: content-box;
   }
-
+  */
   .markup-container .markup-content {
-    overflow-x: hidden;
-    overflow-y: visible;
+    /* overflow-x: hidden; */
+    /* overflow-y: visible; */
     padding-top: 4em;
-    margin-top: -4em;
+    margin-top: -3em;
     margin-left: -1ch;
     margin-right: -1ch;
     line-break: loose;
@@ -76,6 +79,20 @@
   }
 }
 
+@media only screen and (prefers-color-scheme: light) {
+  body {
+    background-color: var(--markup-light-background, #999);
+    color: var(--markup-light-contrast, black);
+  }
+}
+
+@media only screen and (prefers-color-scheme: dark) {
+  body {
+    background-color: var(--markup-dark-background, #999);
+    color: var(--markup-dark-contrast, white);
+  }
+}
+
 /** FLEX **/ /* @import '/pholio/styles/flex.css'; */
 
 .markup-container {
@@ -86,7 +103,10 @@
   font-family: 'Iosevka Web', monospace;
   font-variant-ligatures: contextual;
   white-space: pre-wrap;
-  transition: background 0.75s ease-in-out;
+}
+
+.markup-container.fade {
+  transition: background 0.5s ease-in-out;
 }
 
 .markup-container > header {
@@ -225,6 +245,10 @@ i[icon] {
 }
 
 @media only screen {
+  body {
+    margin: 0;
+  }
+
   .markup-container .markup-content {
     /* will-change: filter, contents; */
     transition: filter 0.15s ease-out;
@@ -245,7 +269,7 @@ i[icon] {
     /* float: center; */
   }
 
-  .markup-container.dark-mode > header {
+  .dark-mode .markup-container > header {
     --shadow: var(--dark, transparent);
   }
 
@@ -265,6 +289,11 @@ i[icon] {
   }
 }
 
+@media screen and (max-width: 480px) {
+  html {
+    font-size: calc(1vmin + 1vmax);
+  }
+}
 @media print {
   :root {
     --markup-color: black;
@@ -292,8 +321,10 @@ i[icon] {
   }
 }
 
-@supports (padding: env(safe-area-inset-top)) {
-  body {
+@supports (margin: env(safe-area-inset-top)) {
+  html {
     margin: env(safe-area-inset-top) env(safe-area-inset-right) env(safe-area-inset-bottom) env(safe-area-inset-left);
+    min-width: calc(100vw - env(safe-area-inset-left) - env(safe-area-inset-right));
+    width: calc(100vw - env(safe-area-inset-left) - env(safe-area-inset-right));
   }
 }
