--- a/packages/tokenizer/examples/browser/styles.css
+++ b/packages/tokenizer/examples/browser/styles.css
@@ -25,6 +25,7 @@
     /* box-sizing: border-box; */
     min-height: 100vh;
     min-width: 100vw;
+    max-width: 100vw;
     width: 100vw;
     margin-left: calc(100vw - 100%);
     -webkit-text-size-adjust: 100%;
@@ -38,10 +39,12 @@
     width: inherit;
     min-height: inherit;
     min-width: inherit;
+    max-width: inherit;
+    /* overflow-x: hidden; */
     margin: 0;
     /* max-height: inherit; */
     /* overflow-y: scroll; */
-    overflow-x: hidden;
+    /* overflow-x: hidden; */
     touch-action: pan-y;
     background-color: #999;
   }
@@ -49,17 +52,18 @@
   .markup-container {
     height: max-content;
     width: inherit;
-    /* overflow-x: hidden; */
-    /* max-width: inherit; */
+    max-width: inherit;
     min-height: inherit;
     min-width: inherit;
     /* max-height: inherit; */
     padding: 1ch;
     margin: 0;
     box-sizing: border-box;
+    /* display: grid; */
   }
   .markup-wrapper {
     margin: 0 1em 0 0;
+    /* overflow-x: hidden; */
     /* box-sizing: content-box; */
     /* margin-inline-start: 1ch; */
   }
@@ -328,6 +332,7 @@ i[icon] {
   html {
     margin: env(safe-area-inset-top) env(safe-area-inset-right) env(safe-area-inset-bottom) env(safe-area-inset-left);
     min-width: calc(100vw - env(safe-area-inset-left) - env(safe-area-inset-right));
+    max-width: calc(100vw - env(safe-area-inset-left) - env(safe-area-inset-right));
     width: calc(100vw - env(safe-area-inset-left) - env(safe-area-inset-right));
   }
 }
